I think e-xx makes problems, avoid mult. e-12 in the tmpl

--- a/code/optLinac_40nC.in
+++ b/code/optLinac_40nC.in
@@ -5,7 +5,7 @@ OPTION, INFO=FALSE;
 dv0: DVAR, VARIABLE="IBF",    LOWERBOUND=200, UPPERBOUND=500;
 dv1: DVAR, VARIABLE="IM",     LOWERBOUND=170, UPPERBOUND=260;
 dv2: DVAR, VARIABLE="GPHASE", LOWERBOUND=-30.0, UPPERBOUND=0.0;
-dv3: DVAR, VARIABLE="FWHM", LOWERBOUND=1.5, UPPERBOUND=10.0;
+dv3: DVAR, VARIABLE="FWHM", LOWERBOUND=1.5e-12, UPPERBOUND=1.0e-11;
  
 //Quad values
 dv4: DVAR, VARIABLE="KQ1", LOWERBOUND=-8.0, UPPERBOUND=8.0; 
