final optimization run?

--- a/phases/quads1-4_newobj/optLinac-40nC.in
+++ b/phases/quads1-4_newobj/optLinac-40nC.in
@@ -44,7 +44,7 @@ c3: CONSTRAINT, EXPR="fabs(statVariableAt('rms_y',16.5)-statVariableAt('rms_x',1
 OPTIMIZE, INPUT="tmpl/optLinac-40nC.tmpl", 
 	  OUTPUT="optLinac-40nC",
 	  OUTDIR="results",
-	  OBJECTIVES = {rmsx3, rmsy3, rmspx3, rmspy3, de3}, 
+	  OBJECTIVES = {rmss3, rmsx3, rmsy3, rmspx3, rmspy3, de3}, 
 	  DVARS = {dv0, dv1, dv4, dv5, dv6, dv7}, 
 	  CONSTRAINTS = {c1, c2, c3},  //, c7, c8, c9, c10},
 	  INITIALPOPULATION=656, 
